[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde_derive = "1.0.156"
serde = "1.0.0"
serde_json = "1.0"
owm = { path = "../owm" }
wapi = { path = "../wapi" }
anyhow = "1.0.69"

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false

[dependencies.time]
version = "0.3.20"
features = ["parsing", "macros"]
